language/move-lang/tests/move_check/naming/unbound_unqualified_function.move
module 0x8675309::M {
    fun foo() {
        bar();
        let x = bar();
        *bar() = 0;
    }
}
